corrected mis replaced text

--- a/creative-services/document-templates-formatting-graphic-design.html
+++ b/creative-services/document-templates-formatting-graphic-design.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Struggling to create tidy document-templates-formatting-graphic-design documents for your business? Click to learn more who-we-are what we can do to help.">
+    content="Struggling to create tidy template documents for your business? Click to learn more about what we can do to help.">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -118,7 +118,7 @@
 </nav>
 
   <div class="title">
-    <h1 class="title">Presentation and proposal document-templates-formatting-graphic-design</h1>
+    <h1 class="title">Presentation and proposal templates</h1>
   </div>
   <div class="container">
     <div class="row">
@@ -128,11 +128,11 @@
       <div class="col">
         <p class=" mb-1 bio">
           Who doesn't like receiving compliment on their presentation deck? Help your stakeholder focus on the content of your
-          presentation by using a stylish and uncluttered presentation document-templates-formatting-graphic-design that will help you engage with your audience and
-          communicate effectively. We can create a document-templates-formatting-graphic-design for you to use as a base for every presentation or help you design
+          presentation by using a stylish and uncluttered presentation template that will help you engage with your audience and
+          communicate effectively. We can create a template for you to use as a base for every presentation or help you design
           your next top notch deck by structuring the message and design layout that will set you up for success. We can also help
           you create compelling graphics that will convey your message effectively and rapidly.
-          As well as creating document-templates-formatting-graphic-design, we can format your Word or Google Docs documents to fix all the funky formatting errors
+          As well as creating templates, we can format your Word or Google Docs documents to fix all the funky formatting errors
           and stop you from pulling your hair out!
                    
           </br>
@@ -143,11 +143,11 @@
           <li class="bio-list">◼ PowerPoint presentation</li>
           <li class="bio-list">◼ Google Slide presentation</li>
           <li class="bio-list">◼ Webinar slide deck design</li>
-          <li class="bio-list">◼ Proposal document-templates-formatting-graphic-design</li>
-          <li class="bio-list">◼ Letter head document-templates-formatting-graphic-design</li>
-          <li class="bio-list">◼ Internal document document-templates-formatting-graphic-design</li>
-          <li class="bio-list">◼ Email formatting document-templates-formatting-graphic-design</li>
-          <li class="bio-list">◼ Client report document-templates-formatting-graphic-design</li>
+          <li class="bio-list">◼ Proposal template</li>
+          <li class="bio-list">◼ Letter head template</li>
+          <li class="bio-list">◼ Internal document template</li>
+          <li class="bio-list">◼ Email formatting template</li>
+          <li class="bio-list">◼ Client report template</li>
           <li class="bio-list">◼ <a href="marketing-material-graphic-design.html">Graphic design</a></li>
           <li class="bio-list">◼ General formatting help on Microsoft Word or Google Docs</li>
 
