--- a/creative-services/logo-design-christchurch-nz.html
+++ b/creative-services/logo-design-christchurch-nz.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Are you looking for a new logo or rebrand? Click to learn more who-we-are the ways we can help you stand out.">
+    content="Are you looking for a new logo or rebrand? Click to learn more about the ways we can help you stand out.">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -109,7 +109,7 @@
       </ul>
     </li>
     <li class="item"> <a href="../our-previous-work.html" title="Our previous work">Work</a></li>
-    <li class="item"> <a href="../who-we-are.html" title="who-we-are">who-we-are</a></li>
+    <li class="item"> <a href="../who-we-are.html" title="about">about</a></li>
     <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
     <li class="toggle"> <span class="bars"></span></li>
 
