--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Digital & Creative Media Agency | Christchurch NZ-Creafix Design</title>
   <meta charset="UTF-8" />
-  <meta name="description" content="Digital and Creative Media agency based in Christchurch, NZ. Learn more who-we-are how we can help you make the most of your digital presence." >
+  <meta name="description" content="Digital and Creative Media agency based in Christchurch, NZ. Learn more about how we can help you make the most of your digital presence." >
 <link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   
