--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -111,14 +111,14 @@
       </ul>
     </li>
     <li class="item"> <a href="./../our-previous-work.html" title="Our previous work">Work</a></li>
-    <li class="item"> <a href="./../who-we-are.html" title="who-we-are">who-we-are</a></li>
+    <li class="item"> <a href="./../who-we-are.html" title="about">about</a></li>
     <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
     <li class="toggle"> <span class="bars"></span></li>
 
 
   </ul>
 </nav>
-<div class="top-line-title" id="who-we-are"></div>
+<div class="top-line-title" id="about"></div>
 <div class="title">
   <h1 class="title">Privacy Policy</h1>
 </div>
@@ -129,7 +129,7 @@ Creafix Design.</p>
 
 <h2>Personal information</h2>
 
-<p>The types of personal information we may collect who-we-are you include:
+<p>The types of personal information we may collect about you include:
 <ul>
 <li>◼ your name;</li>
 <li>◼ your contact details, including email address, mailing address, street address and/or telephone number;</li>
@@ -137,10 +137,10 @@ Creafix Design.</p>
 <li>◼ your credit card details or bank details;</li>
 <li>◼ your demographic information, such as postcode;</li>
 <li>◼ information you provide to us through customer surveys;</li>
-<li>◼ details of products and services we have provided to you and/or that you have enquired who-we-are, and our response to you;</li>
+<li>◼ details of products and services we have provided to you and/or that you have enquired about, and our response to you;</li>
 <li>◼ your browser session and geo-location data, device and network information, statistics on page views and sessions,
 acquisition sources, search queries and/or browsing behaviour;</li>
-<li>◼ information who-we-are your access and use of our Site, including through the use of Internet cookies, your communications
+<li>◼ information about your access and use of our Site, including through the use of Internet cookies, your communications
 with our Site, the type of browser you are using, the type of operating system you are using and the domain name of your
 Internet service provider;</li>
 <li>◼ additional personal information that you provide to us, directly or indirectly, through your use of our Site, associated
@@ -160,8 +160,8 @@ We may collect, hold, use and disclose personal information for the following pu
 <li>◼ for analytics, market research and business development, including to operate and improve our Site, associated
 applications and associated social media platforms;</li>
 <li>◼ to offer additional benefits to you;</li>
-<li>◼ for advertising and marketing, including to send you promotional information who-we-are our products and services and
-information who-we-are third parties that we consider may be of interest to you;</li>
+<li>◼ for advertising and marketing, including to send you promotional information about our products and services and
+information about third parties that we consider may be of interest to you;</li>
 </ul>
 </p>
 
@@ -201,18 +201,18 @@ we will collect, hold, use and disclose your personal information in accordance 
 have to provide personal information to us, however, if you do not, it may affect your use of this Site or the products
 and/or services offered on or through it.</p>
 <p></p>
-Information from third parties: If we receive personal information who-we-are you from a third party, we will protect it as
-set out in this Privacy Policy. If you are a third party providing personal information who-we-are somebody else, you
+Information from third parties: If we receive personal information about you from a third party, we will protect it as
+set out in this Privacy Policy. If you are a third party providing personal information about somebody else, you
 represent and warrant that you have such person's consent to provide the personal information to us.</p>
 <p>
 Restrict: You may choose to restrict the collection or use of your personal information. If you have previously agreed
 to us using your personal information for direct marketing purposes, you may change your mind at any time by contacting
 us using the details below.</p>
 <p>
-Access: You may request details of the personal information that we hold who-we-are you. An administrative fee may be payable
+Access: You may request details of the personal information that we hold about you. An administrative fee may be payable
 for the provision of such information.</p>
 <p>
-Correction: If you believe that any information we hold who-we-are you is inaccurate, out of date, incomplete, irrelevant or
+Correction: If you believe that any information we hold about you is inaccurate, out of date, incomplete, irrelevant or
 misleading, please contact us using the details below. We will take reasonable steps to correct any information found to
 be inaccurate, incomplete, misleading or out of date.</p>
 <p>
@@ -246,7 +246,7 @@ media and online media feeds as part of our re-targeting campaigns. If and when 
 personal information, this information may be linked to the data stored in the cookie.</p>
 <p>
 We may use web beacons on our Site from time to time. Web beacons (also known as Clear GIFs) are small pieces of code
-placed on a web page to monitor the visitor's behaviour and collect data who-we-are the visitor's viewing of a web page. For
+placed on a web page to monitor the visitor's behaviour and collect data about the visitor's viewing of a web page. For
 example, web beacons can be used to count the users who visit a web page or to deliver a cookie to the browser of a
 visitor viewing that page.</p>
 
