--- a/websitetermofuse.html
+++ b/websitetermofuse.html
@@ -110,14 +110,14 @@
       </ul>
     </li>
     <li class="item"> <a href="./../our-previous-work.html" title="Our previous work">Work</a></li>
-    <li class="item"> <a href="./../who-we-are.html" title="who-we-are">who-we-are</a></li>
+    <li class="item"> <a href="./../who-we-are.html" title="about">about</a></li>
     <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
     <li class="toggle"> <span class="bars"></span></li>
 
 
   </ul>
 </nav>
-<div class="top-line-title" id="who-we-are"></div>
+<div class="top-line-title" id="about"></div>
 <div class="title">
   <h1 class="title">Website terms of use</h1>
 </div>
@@ -213,7 +213,7 @@
   exclude any person from using our Site, at any time and at our sole discretion. We are not responsible for any Liability
   you may suffer arising from or in connection with any such discontinuance or exclusion.
   </p>
- <p> <b>Warranties and disclaimers:</b> To the maximum extent permitted by law, we make no representations or warranties who-we-are our
+ <p> <b>Warranties and disclaimers:</b> To the maximum extent permitted by law, we make no representations or warranties about our
   Site or the Content, including (without limitation) that:
   <ul>
   <li>◼ they are complete, accurate, reliable, up-to-date and suitable for any particular purpose;</li>
