--- a/who-we-are.html
+++ b/who-we-are.html
@@ -5,7 +5,7 @@
   <title>Who are we | Christchurch NZ-Creafix Design</title>
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Experienced Designer, Developers & Marketers ready to help you grow your business digitally. Click to learn more who-we-are our expertise.">
+    content="Experienced Designer, Developers & Marketers ready to help you grow your business digitally. Click to learn more about our expertise.">
 <link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -110,19 +110,19 @@
       </ul>
     </li>
     <li class="item"> <a href="./../our-previous-work.html" title="Our previous work">Work</a></li>
-    <li class="item"> <a href="./../who-we-are.html" title="who-we-are">who-we-are</a></li>
+    <li class="item"> <a href="./../who-we-are.html" title="about">about</a></li>
     <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
     <li class="toggle"> <span class="bars"></span></li>
 
 
   </ul>
 </nav>
-<div class="top-line-title" id="who-we-are"></div>
+<div class="top-line-title" id="about"></div>
 <div class="title">
   <h1 class="title">Our team</h1>
 </div>
 <div class="container-fluid ">
-  <div class="who-we-are-box">
+  <div class="about-box">
     <div class="row mt-2 mb-1 h-100">
       <div class="col-md-5"></div>
       <div class="col-md-6 mb-4"> <h2>Audrey Chevillat - Creative Director</h2></div>
@@ -137,7 +137,7 @@
         <p class="bio-highlight mb-1">
           French born engineer turned visual designer and front end developer who's happy to call New Zealand home.</p>
         <p class="bio mb-1">
-          I am passionate who-we-are design and digital technologies; I love to know how things work (hello engineering brain!) but
+          I am passionate about design and digital technologies; I love to know how things work (hello engineering brain!) but
           also make things functional for users and pleasing to the eye (hello creative brain!). Being able to combine these two
           sides of my brain has been a revelation and encouraged me to start Creafix Design. The desire to help businesses create
           media that helps promote brands, products and information to their customers is the foundation or "raison de vivre" of
@@ -153,7 +153,7 @@
         audience.
         </p> <br />
         <p class="bio mb-1">
-          I'm happiest when I'm creating, learning, exploring, and thinking who-we-are how to make things better. Feel free to reach
+          I'm happiest when I'm creating, learning, exploring, and thinking about how to make things better. Feel free to reach
           out and say hello even if you haven't got a project in mind yet!
         </p><br />
        
