--- a/creative-services/marketing-material-graphic-design.html
+++ b/creative-services/marketing-material-graphic-design.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Did you know we help businesses like yours create brochures and graphics that promotes your business? Click to learn more who-we-are how we can help.">
+    content="Did you know we help businesses like yours create brochures and graphics that promotes your business? Click to learn more about how we can help.">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -109,7 +109,7 @@
         </ul>
       </li>
       <li class="item"> <a href="../our-previous-work.html" title="Our previous work">Work</a></li>
-      <li class="item"> <a href="../who-we-are.html" title="who-we-are">who-we-are</a></li>
+      <li class="item"> <a href="../who-we-are.html" title="about">about</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
   
