--- a/our-previous-work.html
+++ b/our-previous-work.html
@@ -110,14 +110,14 @@
       </ul>
     </li>
     <li class="item"> <a href="./../our-previous-work.html" title="Our previous work">Work</a></li>
-    <li class="item"> <a href="./../who-we-are.html" title="who-we-are">who-we-are</a></li>
+    <li class="item"> <a href="./../who-we-are.html" title="about">about</a></li>
     <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
     <li class="toggle"> <span class="bars"></span></li>
 
 
   </ul>
 </nav>
-<div class="top-line-title" id="who-we-are"></div>
+<div class="top-line-title" id="about"></div>
 <div class="title">
   <h1 class="title">Projects</h1>
 </div>
