Updated spam blocker form sign up

--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
       </label>
     </div>
   </div>-->
+  <input type="text" name="xx_password" style="display:none !important" tabindex="-1" autocomplete="off">
   
   <div class="col-12 contact-button">
     <button type="submit" name="submit" class=" contact-link">Send</button>
