--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </ul>
     </li>
     <li class="item"> <a href="../our-previous-work.html" title="Our previous work">Work</a></li>
-    <li class="item"> <a href="../who-we-are.html" title="who-we-are">who-we-are</a></li>
+    <li class="item"> <a href="../who-we-are.html" title="About">About</a></li>
     <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
     <li class="toggle"> <span class="bars"></span></li>
 
